# sniffglue

./: .dockerignore  .gitignore  .travis.yml  Cargo.toml  Dockerfile  Makefile  README.md  sniffglue.conf
.github/workflows/: cross.yml  docker-release.yml  docker.yml  docs.yml  reprotest.yml  rust.yml
benches/: bench.rs
ci/: Dockerfile  boxxy_stage0.txt  boxxy_stage1.txt  boxxy_stage2.txt  build.sh  dependencies.sh  install_libs.sh  reprotest.sh  setup-cross.sh  setup.sh  test.sh
docs/: Dockerfile.musl  Dockerfile.reprotest  release.md  sniffglue.1  sniffglue.1.scd  sniffglue.busybox.conf  sniffglue.docker.conf
examples/: boxxy.rs  read_packet.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_target_1.rs  read_packet.rs
pcaps/: README.md  bgp.pcap  tcp-ethereal-file1.pcap
src/: cli.rs  errors.rs  fmt.rs  lib.rs  link.rs  main.rs  nom_http.rs  sniff.rs  structs.rs
src/centrifuge/: arp.rs  cjdns.rs  dhcp.rs  dns.rs  dropbox.rs  http.rs  icmp.rs  mod.rs  sll.rs  ssdp.rs  tcp.rs  tls.rs  udp.rs
src/sandbox/: config.rs  error.rs  mod.rs  seccomp.rs  seccomp_unsupported.rs  syscalls.rs
src/sandbox/syscalls/: linux-x86_64.rs
src/structs/: arp.rs  cjdns.rs  dhcp.rs  dns.rs  dropbox.rs  ether.rs  http.rs  icmp.rs  ip.rs  ipv4.rs  ipv6.rs  mod.rs  raw.rs  ssdp.rs  tcp.rs  tls.rs  udp.rs
