[package]
name = "sniffglue"
version = "0.13.1"
description = "Secure multithreaded packet sniffer"
authors = ["kpcyrd <git@rxv.cc>"]
license = "GPL-3.0"
repository = "https://github.com/kpcyrd/sniffglue"
categories = ["command-line-utilities"]
readme = "README.md"
exclude = ["pcaps/**/*", "**/*.pcap"]
edition = "2018"

[package.metadata.deb]
license-file = [ "LICENSE" ]
extended-description = """\
sniffglue is a network sniffer written in rust. Network packets are parsed \
concurrently using a thread pool to utilize all cpu cores. Project goals are \
that you can run sniffglue securely on untrusted networks and that it must \
not crash when processing packets. The output should be as useful as possible \
by default.\
"""
depends = "$auto"
section = "net"
priority = "optional"

[lib]
doc = false

[badges]
travis-ci = { repository = "kpcyrd/sniffglue" }

[dependencies]
structopt = "0.3"
anyhow = "1"
num_cpus = "1.6"
pcap-sys = "0.1.3"
pktparse = { version = "0.7", features = ["serde"] }
nom = "7"
dns-parser = "0.8"
tls-parser = "0.11"
dhcp4r = "0.2.0"
ansi_term = "0.12"
reduce = "0.1.1"
atty = "0.2"
env_logger = "0.9"
log = "0.4"
toml = "0.5"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
users = "0.11"
nix = "0.23"
sha2 = "0.9"
dirs-next = "2.0"
base64 = "0.13"
libc = "0.2"
bstr = "0.2.16"

[target.'cfg(target_os="linux")'.dependencies]
syscallz = "0.16"
#syscallz = { path="../syscallz-rs" }

[dev-dependencies]
boxxy = "0.12"
