[package]
name = "sniffglue"
version = "0.16.1"
description = "Secure multithreaded packet sniffer"
authors = ["kpcyrd <git@rxv.cc>"]
license = "GPL-3.0-or-later"
repository = "https://github.com/kpcyrd/sniffglue"
categories = ["command-line-utilities"]
readme = "README.md"
exclude = ["pcaps/**/*", "**/*.pcap"]
edition = "2021"

[package.metadata.deb]
license-file = [ "LICENSE" ]
extended-description = """\
sniffglue is a network sniffer written in rust. Network packets are parsed \
concurrently using a thread pool to utilize all cpu cores. Project goals are \
that you can run sniffglue securely on untrusted networks and that it must \
not crash when processing packets. The output should be as useful as possible \
by default.\
"""
depends = "$auto"
section = "net"
priority = "optional"

[workspace]
members = ["fuzz"]

[lib]
doc = false

[dependencies]
anyhow = "1"
num_cpus = "1.6"
pcap-sys = "0.1.3"
pktparse = { version = "0.7.1", features = ["serde"] }
nom = "7"
dns-parser = "0.8"
tls-parser = "0.12"
dhcp4r = "0.2.0"
ansi_term = "0.12"
env_logger = "0.11"
log = "0.4"
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
nix = { version = "0.29", features = ["fs", "user"] }
sha2 = "0.10"
dirs-next = "2.0"
libc = "0.2"
uzers = "0.12"
bstr = { version = "1", features = ["serde"] }
data-encoding = "2.5.0"
clap = { version = "4.4.11", features = ["derive"] }
clap_complete = "4.4.4"
httparse = "1.8.0"

[target.'cfg(target_os="linux")'.dependencies]
syscallz = "0.17"
#syscallz = { path="../syscallz-rs" }

[dev-dependencies]
boxxy = "0.13"
